[metadata]
name = bench_event_api
summary = API used to generate Summary table from metrics stored in OEB database
description-file =
    README.md
author = Javier Garrayo Ventas
author-email = javier.garrayo@bsc.es
version = 1.0
license = GNU LGPL-v2.1
home-page = https://github.com/inab/bench_event_api
classifier =
    Intended Audience :: Research/Science
    Intended Audience :: Information Technology
    Intended Audience :: Bioinformatics/Computational Biology
    License :: OSI Approved :: GNU LGPL-v2.1
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    bench_event_api